시큐리티 수정(공 엔드포인트가 401 타지 않게)